--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,9 +3,13 @@
   --foreground: #171717;
 }
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #F3F3F3;
     --foreground: #ededed;
   }
 }
@@ -14,12 +18,15 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  /* background: url('/images/GradientBackground.png') no-repeat center center fixed; */
+
+  font-family: 'Open Sans', Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -40,3 +47,15 @@ a {
     color-scheme: dark;
   }
 }
+
+.header-background {
+  background: url('/images/headerbg.png') no-repeat center center;
+  background-size: cover; /* Ensure the image covers the entire header area */
+  color: white; /* Or adjust based on your needs */
+}
+
+
+
+
+
+
